--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section>
         <h1>Promotora</h1>
         <div class="module width-1-2">
-            <a href="http://contrabaix.com" target="_blank"><img src="img/logo-cb.png"></a>
+            <a href="http://contrabaix.com" target="_blank"><img src="img/logo-contrabaix.jpg"></a>
         </div>
         <div class="module width-1-2">
             <a href="http://popaprop.cat" target="_blank"><img src="img/logo-popaprop.png"></a>
@@ -42,11 +42,11 @@
      <section>
         <h1>Productora</h1>
         <div class="module width-1-3 musics">
-            <a href="http://contrabaix.com" target="_blank"><img src="img/javiercolina.jpg"></a>
+            <a href="http://javiercolina.com" target="_blank"><img src="img/javiercolina.jpg"></a>
             <h2>Javier Colina</h2>
         </div>
         <div class="module width-1-3 musics">
-            <a href="http://contrabaix.com" target="_blank"><img src="img/miralta.jpg"></a>
+            <a href="http://www.marcmiralta.com/biografia.htm" target="_blank"><img src="img/miralta.jpg"></a>
             <h2>Marc Miralta</h2>
         </div>
         <div class="module width-1-3 musics">
@@ -54,11 +54,11 @@
             <h2>Perico Sambeat</h2>
         </div>
         <div class="module width-1-3 musics">
-             <a href="http://pericosambeat.com" target="_blank"><img src="img/cms.jpg"></a>
+             <a href="http://pericosambeat.com/cms/" target="_blank"><img src="img/cms.jpg"></a>
              <h2>Colina, Miralta, Sambeat CMS trio</h2>
         </div>
         <div class="module width-1-3 musics">
-            <a href="http://pericosambeat.com" target="_blank"><img src="img/wollny.jpg"></a>
+            <a href="http://www.michael-wollny.de/" target="_blank"><img src="img/wollny.jpg"></a>
             <h2>Michael Wollny</h2>
         </div>
         <div class="module width-1-3 musics">
